<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hello"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="100dp"
    android:visibility="visible"
    tools:context="com.meu_pacote.myapplicationhellokitty.MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/luiz_henrique_brito"
        android:textColor="@color/deep_pink"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/flavia_pereira"
        android:textColor="@color/deep_pink"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/paula_entringer"
        android:textColor="@color/deep_pink"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/igor_nery"
        android:textColor="@color/deep_pink"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/nicollas_gomes_rocha"
        android:textColor="@color/deep_pink"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center"
        android:padding="16dp"
        android:text="Voltar"
        android:textSize="60sp" />
</LinearLayout>
